# rip

./: Cargo.toml  LICENSE.md  README.md
src/: cli.rs  cran.rs  main.rs
