[package]
name = "rip"
authors = ["Alberson da Silva Miranda <albersonmiranda@hotmail.com>"]
version = "0.1.0"
description = "A lightweight CLI wrapper around Rscript for installing R packages"
edition = "2021"
license = "MIT"
repository = "https://github.com/albersonmiranda/rip"
homepage = "https://github.com/albersonmiranda/rip"
documentation = "https://docs.rs/rip"
readme = "README.md"
keywords = ["r", "cli", "rscript", "cran", "installer"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
strsim = "0.11"
